--- a/outputs/clash_meta.yaml
+++ b/outputs/clash_meta.yaml
@@ -11,7 +11,20 @@ profile:
   tracing: true
 global-client-fingerprint: chrome
 proxies:
-- name: 🇺🇸 US-tuic | 0-1
+- name: 🇫🇷 FR-tuic | 0-1
+  type: tuic
+  server: 62.210.103.14
+  port: 44556
+  udp: true
+  uuid: 0d9d053c-81c8-4f26-9b5c-dff313dfdd70
+  password: dongtaiwang.com
+  alpn:
+  - h3
+  disable-sni: true
+  reduce-rtt: true
+  udp-relay-mode: native
+  congestion-controller: bbr
+- name: 🇺🇸 US-tuic | 1-1
   type: tuic
   server: 109.104.152.4
   port: 443
@@ -24,12 +37,12 @@ proxies:
   reduce-rtt: true
   udp-relay-mode: native
   congestion-controller: bbr
-- name: 🇫🇷 FR-tuic | 1-1
+- name: 🇳🇱 NL-tuic | 2-1
   type: tuic
-  server: 62.210.103.14
-  port: 44556
+  server: 109.104.153.17
+  port: 22334
   udp: true
-  uuid: 0d9d053c-81c8-4f26-9b5c-dff313dfdd70
+  uuid: 364d2d85-5bfd-463f-a3dd-a08012a2a6ce
   password: dongtaiwang.com
   alpn:
   - h3
@@ -180,14 +193,30 @@ proxies:
   h2-opts:
     path: /
     host: []
+- name: 🇺🇸 US-vless | 1-0
+  type: vless
+  server: 108.181.22.213
+  port: 28945
+  uuid: 9cc39477-0d85-4419-84d4-fb7fc77668b3
+  flow: xtls-rprx-vision
+  tls: true
+  servername: m.media-amazon.com
+  network: tcp
+  client-fingerprint: chrome
+  grpc-opts:
+    grpc-service-name: /
+  reality-opts:
+    public-key: yKXmLTmXAi-BHBg3JpCz-NWUmVcKlfm7iMmVoq7YQx0
+    short-id: 6ba85179e30d4fc2
 proxy-groups:
 - name: 🚀 节点选择
   type: select
   proxies:
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -201,14 +230,16 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: ♻️ 自动选择
   type: url-test
   url: http://www.gstatic.com/generate_204
   interval: 300
   tolerance: 50
   proxies:
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -222,13 +253,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 📺 巴哈姆特
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -242,13 +275,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 📺 哔哩哔哩
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -262,13 +297,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 🌏 国内媒体
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -282,13 +319,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 🌍 国外媒体
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -302,13 +341,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 📲 电报信息
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -322,13 +363,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: Ⓜ️ 微软云盘
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -342,13 +385,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: Ⓜ️ 微软服务
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -362,13 +407,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 🍎 苹果服务
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -382,13 +429,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 📢 谷歌FCM
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -402,13 +451,15 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 🤖 OpenAI
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -422,6 +473,7 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 - name: 🎯 全球直连
   type: select
   proxies:
@@ -436,8 +488,9 @@ proxy-groups:
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-tuic | 0-1
-  - 🇫🇷 FR-tuic | 1-1
+  - 🇫🇷 FR-tuic | 0-1
+  - 🇺🇸 US-tuic | 1-1
+  - 🇳🇱 NL-tuic | 2-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -451,6 +504,7 @@ proxy-groups:
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
   - 🇫🇷 FR-vmess | 0-0
+  - 🇺🇸 US-vless | 1-0
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
 - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
